--- a/home.html
+++ b/home.html
@@ -95,12 +95,12 @@
 
         <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
           <img src="img/icons/heard-blue.svg" alt="heard-blue">
-          <span class="hidden min-[1150px]:inline-block">Избранное</span>
+          <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Избранное</span>
         </a>
 
         <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
           <img src="img/icons/rows-block.svg" alt="rows-block">
-          <span class="hidden min-[1150px]:inline-block">Сравнения</span>
+          <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Сравнения</span>
         </a>
 
         <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
@@ -109,7 +109,7 @@
             <span
                 class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
           </div>
-          <span class="hidden min-[1150px]:inline-block">Корзина</span>
+          <span class="hidden min-[1150px]:inline-block hover:text-blue transition cursor-pointer">Корзина</span>
         </div>
 
       </div>
@@ -156,15 +156,15 @@
       class="w-full h-[67px] bg-[#F4F4F4] rounded-[16px] px-8 flex-jsb-c min-w-[1400px]:gap-16 overflow-x-auto bottom-scroll-none hidden sm:flex">
     <div class="w-full flex-jsb-c min-w-[1300px]">
       <div class="flex-jsb-c gap-6 h-full w-[40%]">
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           <img src="img/icons/like-blue.svg" alt="like-blue.svg">
           Подарочные сертификаты
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           <img src="img/icons/percent.svg" alt="percent">
           Скидки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           <img src="img/icons/star-lik.svg" alt="star-lik">
           Новинки
         </a>
@@ -172,22 +172,22 @@
 
       <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8 lg:mx-12"></div>
       <div class="flex-jsb-c gap-6 h-full w-[60%]">
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Удилища
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Катушки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Приманки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Аксессуары
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Оснастка
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Экипировка
         </a>
       </div>
@@ -341,7 +341,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -584,7 +584,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -654,7 +654,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -724,7 +724,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -794,7 +794,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -864,7 +864,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -934,7 +934,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1074,7 +1074,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1148,7 +1148,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1218,7 +1218,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1288,7 +1288,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1364,7 +1364,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1434,7 +1434,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1540,7 +1540,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1614,7 +1614,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1684,7 +1684,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1754,7 +1754,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1830,7 +1830,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1900,7 +1900,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2243,59 +2243,59 @@
         <div class="flex-jsb-s min-[1300px]:gap-[60px] max-[1300px]:flex-col">
           <ul>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Удилища
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Катушки
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Приманки
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Оснастка
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Зимняя рыбалка
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Одежда и обувь
               </a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Электроника
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Аксессуары
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Туризм
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Скидки
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Сертификаты
               </a>
             </li>
@@ -2308,25 +2308,25 @@
         <div class="flex-jsb-s gap-[60px]">
           <ul>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 О магазине
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Доставка и оплата
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Подарочные карты
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Скидки
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Новости
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Сервис и гарантии
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Контакты
               </a>
             </li>
@@ -2361,19 +2361,19 @@
 
         <ul>
           <li>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
               <img src="img/icons/favorite.svg" alt="favorite" class="mr-2">
               Избранное
             </a>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
               <img src="img/icons/rows-white.svg" alt="rows-white" class="mr-2">
               Сравнения
             </a>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
               <img src="img/icons/basket-white.svg" alt="basket-white" class="mr-2">
               Корзина
             </a>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
               <img src="img/icons/login-account.svg" alt="login-account" class="mr-2">
               Регистрация и вход
             </a>
