--- a/profile-promo-codes.html
+++ b/profile-promo-codes.html
@@ -18,136 +18,137 @@
 <body>
 
 
-<div class="w-full h-[50px] bg-[#323232] hidden sm:block">
-  <div class="container h-full">
-    <div class="w-full h-full flex items-center justify-between">
-      <div class="text-white flex-js-c gap-2 cursor-pointer"><img src="img/icons/location-white.svg" alt="">
-        г. Москва
-        <img src="img/icons/down.svg" alt="">
-      </div>
-
-      <div class="flex-je-c gap-6">
-        <span class="text-white">Контакты</span>
-        <div class="text-white flex-js-c gap-2">Покупателям
+  <div class="w-full h-[50px] bg-[#323232] hidden sm:block">
+    <div class="container h-full">
+      <div class="w-full h-full flex items-center justify-between">
+        <div class="text-white flex-js-c gap-2 cursor-pointer"><img src="img/icons/location-white.svg" alt="">
+          г. Москва
           <img src="img/icons/down.svg" alt="">
         </div>
-        <div class="text-white cursor-pointer flex-js-c gap-2">
-          <img src="img/icons/user-white.svg" alt="user-white.svg">
-          Регистрация и вход
+  
+        <div class="flex-je-c gap-6">
+          <div class="flex-js-c gap-3">
+            <div class="flex-js-c gap-3">
+              <img src="img/icons/call-blue.svg" alt="call-blue" width="24" height="24">
+            </div>
+            <div class="flex-js-c gap-2">
+              <div>
+                <a href="tel: 8 921 903 53 50" class="text-white text-nowrap hidden md:block">8 921 903 53 50</a>
+              </div>
+              <div class="ml-[4px]">
+                <a href="#" class="text-blue text-[14px] underline hidden lg:block">
+                  Обратный звонок
+                </a>
+              </div>
+            </div>
+          </div>
+          <span class="text-white">Контакты</span>
+          <div class="text-white flex-js-c gap-2">Покупателям
+            <img src="img/icons/down.svg" alt="">
+          </div>
+          <div class="text-white cursor-pointer flex-js-c gap-2">
+            <img src="img/icons/user-white.svg" alt="user-white.svg">
+            Регистрация и вход
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-
-<div class="w-full py-4 hidden sm:!block">
-  <div class="container">
-    <div class="w-full flex-jsb-c gap-4">
-      <div class="flex-js-c gap-4">
-        <a href="/home.html">
-          <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[273px] hidden min-[1433px]:block">
-          <img src="img/icons/fish-min-logo.svg" alt="logo" class="w-full min-w-[50px] block min-[1433px]:hidden">
-        </a>
-
-        <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition flex min-[915px]:hidden">
-          <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
-          Каталог
-        </button>
-      </div>
-
-      <div class="flex-jsb-c gap-4 hidden min-[915px]:flex">
-        <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition">
-          <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
-          Каталог
-        </button>
-        <form action="#" class="w-[300px] min-[1328px]:w-[486px] bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px]">
-          <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
-            <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none"
-                   placeholder="Поиск по сайту">
-          </label>
-          <button class="w-[80px] h-[50px] bg-transparent flex-jc-c" type="submit">
-            <img src="img/icons/search-white.svg" alt="search-white">
-          </button>
-        </form>
-      </div>
-
-
-      <div class="flex-jsb-c gap-8">
+  
+  
+  <div class="w-full py-4 hidden sm:!block">
+    <div class="container">
+      <div class="w-full flex-jsb-c gap-4">
         <div class="flex-js-c gap-4">
-          <div class="flex-js-c gap-4">
-            <img src="img/icons/call-blue.svg" alt="call-blue">
-          </div>
-          <div>
-            <div>
-              <a href="tel: 8 921 903 53 50" class="text-[20px] text-black font-bold text-nowrap">8 921 903 53 50</a>
-            </div>
-            <div class="mt-[-4px]">
-              <a href="#" class="text-blue underline">
-                Обратный звонок
-              </a>
-            </div>
-          </div>
+          <a href="/home.html">
+            <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[273px] hidden min-[1433px]:block">
+            <img src="img/icons/fish-min-logo.svg" alt="logo" class="w-full min-w-[50px] block min-[1433px]:hidden">
+          </a>
+  
+          <button
+              class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition min-w-[150px] flex min-[915px]:hidden">
+            <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
+            Каталог
+          </button>
         </div>
-
-        <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-          <img src="img/icons/heard-blue.svg" alt="heard-blue">
-          <span class="hidden min-[1150px]:inline-block">Избранное</span>
-        </a>
-
-        <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-          <img src="img/icons/rows-block.svg" alt="rows-block">
-          <span class="hidden min-[1150px]:inline-block">Сравнения</span>
-        </a>
-
-        <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
-          <div class="relative w-10 h-10 flex-jc-c">
-            <img src="img/icons/shop.svg" alt="card-blue">
-            <span
-                class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
-          </div>
-          <span class="hidden min-[1150px]:inline-block">Корзина</span>
+  
+        <div class="flex-jsb-c gap-4 hidden min-[915px]:flex flex-grow">
+          <button
+              class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition  min-w-[150px]">
+            <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
+            Каталог
+          </button>
+          <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px]">
+            <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
+              <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none"
+                     placeholder="Поиск по сайту">
+            </label>
+            <button class="w-[80px] h-[50px] bg-transparent flex-jc-c" type="submit">
+              <img src="img/icons/search-white.svg" alt="search-white">
+            </button>
+          </form>
         </div>
-
+  
+  
+        <div class="flex-jsb-c gap-8">
+          
+  
+          <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+            <img src="img/icons/heard-blue.svg" alt="heard-blue">
+            <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Избранное</span>
+          </a>
+  
+          <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+            <img src="img/icons/rows-block.svg" alt="rows-block">
+            <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Сравнения</span>
+          </a>
+  
+          <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
+            <div class="relative w-10 h-10 flex-jc-c">
+              <img src="img/icons/shop.svg" alt="card-blue">
+              <span
+                  class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+            </div>
+            <span class="hidden min-[1150px]:inline-block hover:text-blue transition cursor-pointer">Корзина</span>
+          </div>
+  
+        </div>
+  
       </div>
-
+  
     </div>
-
   </div>
-</div>
-
-<div
-    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
-  <a href="home.html">
-    <img src="img/logo-header.svg" alt="" class="w-[122px]">
-  </a>
-
-  <div class="flex-jsb-c gap-1">
-    <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <img src="img/icons/heard-blue.svg" alt="heard-blue" width="24" height="24">
+  
+  <div
+      class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
+    <a href="home.html">
+      <img src="img/logo-header.svg" alt="" class="w-[122px]">
     </a>
-
-    <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <img src="img/icons/rows-block.svg" alt="rows-block" width="24" height="24">
-    </a>
-
-    <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <div class="relative w-10 h-10 flex-jc-c">
-        <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
-        <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+  
+    <div class="flex-jsb-c gap-1">
+      <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <img src="img/icons/heard-blue.svg" alt="heard-blue" width="24" height="24">
+      </a>
+  
+      <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <img src="img/icons/rows-block.svg" alt="rows-block" width="24" height="24">
+      </a>
+  
+      <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <div class="relative w-10 h-10 flex-jc-c">
+          <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
+          <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+        </div>
       </div>
+  
     </div>
-
+  
+    <div class="flex-je-c gap-1">
+      Меню
+      <img src="img/icons/mobile-menu.svg" alt="mobile-menu">
+    </div>
+  
   </div>
-
-  <div class="flex-je-c gap-1">
-    Меню
-    <img src="img/icons/mobile-menu.svg" alt="mobile-menu">
-  </div>
-
-</div>
 
 
 <div class="container w-full">
@@ -156,15 +157,15 @@
       class="w-full h-[67px] bg-[#F4F4F4] rounded-[16px] px-8 flex-jsb-c min-w-[1400px]:gap-16 overflow-x-auto bottom-scroll-none hidden sm:flex">
     <div class="w-full flex-jsb-c min-w-[1300px]">
       <div class="flex-jsb-c gap-6 h-full w-[40%]">
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           <img src="img/icons/like-blue.svg" alt="like-blue.svg">
           Подарочные сертификаты
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           <img src="img/icons/percent.svg" alt="percent">
           Скидки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           <img src="img/icons/star-lik.svg" alt="star-lik">
           Новинки
         </a>
@@ -172,22 +173,22 @@
 
       <div class="min-w-[1px] w-[1px] h-[27px] bg-[#CACACA] mx-8 lg:mx-12"></div>
       <div class="flex-jsb-c gap-6 h-full w-[60%]">
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Удилища
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Катушки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Приманки
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Аксессуары
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Оснастка
         </a>
-        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium">
+        <a href="#" class="flex-js-c gap-2 text-black min-w-[1290px]:text-[18px] font-medium hover:text-blue">
           Экипировка
         </a>
       </div>
@@ -200,13 +201,13 @@
 
   <ul class="flex-js-c gap-1 mb-10">
     <li>
-      <a href="home.html" class="text-[15px] text-[#6E6E6E]">Главная</a>
+      <a href="home.html" class="text-[18px] text-[#6E6E6E] hover:text-blue">Главная</a>
     </li>
-    <li class="text-[15px] text-[#6E6E6E]">
+    <li class="text-[18px] text-[#6E6E6E]">
       •
     </li>
     <li>
-      <a href="catalog.html" class="text-[15px] text-[#6E6E6E]">Регистрация и вход</a>
+      <a href="catalog.html" class="text-[18px] text-[#6E6E6E] hover:text-blue">Регистрация и вход</a>
     </li>
   </ul>
 
@@ -434,59 +435,59 @@
         <div class="flex-jsb-s min-[1300px]:gap-[60px] max-[1300px]:flex-col">
           <ul>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Удилища
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Катушки
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Приманки
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Оснастка
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Зимняя рыбалка
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Одежда и обувь
               </a>
             </li>
           </ul>
           <ul>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Электроника
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Аксессуары
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Туризм
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Скидки
               </a>
             </li>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Сертификаты
               </a>
             </li>
@@ -499,25 +500,25 @@
         <div class="flex-jsb-s gap-[60px]">
           <ul>
             <li>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 О магазине
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Доставка и оплата
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Подарочные карты
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Скидки
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Новости
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Сервис и гарантии
               </a>
-              <a href="#" class="text-white opacity-80 mb-2">
+              <a href="#" class="text-white opacity-80 mb-2 hover:text-blue">
                 Контакты
               </a>
             </li>
@@ -547,24 +548,24 @@
           </a>
 
           <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+  Пн-Пт : с 10:00 до 18:00Сб-Вс : Выходные          </p>
         </div>
 
         <ul>
           <li>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
               <img src="img/icons/favorite.svg" alt="favorite" class="mr-2">
               Избранное
             </a>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
               <img src="img/icons/rows-white.svg" alt="rows-white" class="mr-2">
               Сравнения
             </a>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
               <img src="img/icons/basket-white.svg" alt="basket-white" class="mr-2">
               Корзина
             </a>
-            <a href="#" class="text-white opacity-80 mb-2 flex-js-c">
+            <a href="#" class="text-white opacity-80 mb-2 flex-js-c hover:text-blue text-[17px]">
               <img src="img/icons/login-account.svg" alt="login-account" class="mr-2">
               Регистрация и вход
             </a>
@@ -594,7 +595,7 @@
         </a>
 
         <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
+Пн-Пт : с 10:00 до 18:00Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -667,7 +668,7 @@
           </a>
 
           <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+  Пн-Пт : с 10:00 до 18:00Сб-Вс : Выходные          </p>
         </div>      </div>
 
     </div>
@@ -685,7 +686,6 @@
   </div>
 
 </footer>
-
 
 <script src="js/script.js"></script>
 </body>
