--- a/home-moneu-opened.html
+++ b/home-moneu-opened.html
@@ -108,7 +108,25 @@
 
   <div class="w-full h-[calc(100dvh-162px)] absolute left-0 top-[100%] bg-black/50"></div>
 
-  <div class="w-[489px] h-[calc(100dvh-162px)] bg-white absolute left-0 top-[100%] pl-[100px] overflow-y-auto scroll-gray pb-[100px]">
+  <style>
+    .custom-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+.custom-scroll::-webkit-scrollbar-track {
+  background: transparent;
+}
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: #949596;
+  border-radius: 4px;
+  transition: background-color 0.3s ease;
+}
+.custom-scroll:hover::-webkit-scrollbar-thumb {
+  background-color: #718096;
+}
+  </style>
+
+  <div class="w-[489px] h-[calc(100dvh-162px)] bg-white absolute left-0 top-[100%]
+   pl-[100px] overflow-y-auto custom-scroll pb-[100px] border-r border-r-[#D7DBDF]">
     <div class="w-full text-[#6E6E6E] pt-6 pb-3 border-b">
       По категориям
     </div>
@@ -628,7 +646,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -701,7 +719,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -770,7 +788,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -839,7 +857,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -914,7 +932,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -983,7 +1001,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1205,7 +1223,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1278,7 +1296,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1347,7 +1365,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1416,7 +1434,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1491,7 +1509,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1560,7 +1578,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1695,7 +1713,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1768,7 +1786,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1837,7 +1855,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1906,7 +1924,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1981,7 +1999,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2050,7 +2068,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2150,7 +2168,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2223,7 +2241,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2292,7 +2310,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2361,7 +2379,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2436,7 +2454,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2505,7 +2523,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2939,7 +2957,7 @@
         </a>
 
         <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
+Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные        </p>
       </div>
 
 
