--- a/modal-product-card-check2.html
+++ b/modal-product-card-check2.html
@@ -18,137 +18,137 @@
 <body>
 
 
-<div class="w-full h-[50px] bg-[#323232] hidden sm:block">
-  <div class="container h-full">
-    <div class="w-full h-full flex items-center justify-between">
-      <div class="text-white flex-js-c gap-2 cursor-pointer">
-        г. Москва
-        <img src="img/icons/down.svg" alt="">
-      </div>
-
-      <div class="flex-je-c gap-6">
-        <span class="text-white">Контакты</span>
-        <div class="text-white flex-js-c gap-2">Покупателям
+  <div class="w-full h-[50px] bg-[#323232] hidden sm:block">
+    <div class="container h-full">
+      <div class="w-full h-full flex items-center justify-between">
+        <div class="text-white flex-js-c gap-2 cursor-pointer"><img src="img/icons/location-white.svg" alt="">
+          г. Москва
           <img src="img/icons/down.svg" alt="">
         </div>
-        <div class="text-white cursor-pointer flex-js-c gap-2">
-          <img src="img/icons/user-white.svg" alt="user-white.svg">
-          Регистрация и вход
+  
+        <div class="flex-je-c gap-6">
+          <div class="flex-js-c gap-3">
+            <div class="flex-js-c gap-3">
+              <img src="img/icons/call-blue.svg" alt="call-blue" width="24" height="24">
+            </div>
+            <div class="flex-js-c gap-2">
+              <div>
+                <a href="tel: 8 921 903 53 50" class="text-white text-nowrap hidden md:block">8 921 903 53 50</a>
+              </div>
+              <div class="ml-[4px]">
+                <a href="#" class="text-blue text-[14px] underline hidden lg:block">
+                  Обратный звонок
+                </a>
+              </div>
+            </div>
+          </div>
+          <span class="text-white">Контакты</span>
+          <div class="text-white flex-js-c gap-2">Покупателям
+            <img src="img/icons/down.svg" alt="">
+          </div>
+          <div class="text-white cursor-pointer flex-js-c gap-2">
+            <img src="img/icons/user-white.svg" alt="user-white.svg">
+            Регистрация и вход
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-
-
-<div class="w-full py-4 hidden sm:!block">
-  <div class="container">
-    <div class="w-full flex-jsb-c gap-4">
-      <div class="flex-js-c gap-4">
-        <a href="/home.html">
-          <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[273px] hidden min-[1433px]:block">
-          <img src="img/icons/fish-min-logo.svg" alt="logo" class="w-full min-w-[50px] block min-[1433px]:hidden">
-        </a>
-
-        <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition flex min-[915px]:hidden">
-          <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
-          Каталог
-        </button>
-      </div>
-
-      <div class="flex-jsb-c gap-4 hidden min-[915px]:flex">
-        <button
-            class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition">
-          <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
-          Каталог
-        </button>
-        <form action="#" class="w-[300px] min-[1328px]:w-[486px] bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px]">
-          <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
-            <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none"
-                   placeholder="Поиск по сайту">
-          </label>
-          <button class="w-[80px] h-[50px] bg-transparent flex-jc-c" type="submit">
-            <img src="img/icons/search-white.svg" alt="search-white">
-          </button>
-        </form>
-      </div>
-
-
-      <div class="flex-jsb-c gap-8">
+  
+  
+  <div class="w-full py-4 hidden sm:!block">
+    <div class="container">
+      <div class="w-full flex-jsb-c gap-4">
         <div class="flex-js-c gap-4">
-          <div class="flex-js-c gap-4">
-            <img src="img/icons/call-blue.svg" alt="call-blue">
-          </div>
-          <div>
-            <div>
-              <a href="tel: 8 921 903 53 50" class="text-[20px] text-black font-bold text-nowrap">8 921 903 53 50</a>
-            </div>
-            <div class="mt-[-4px]">
-              <a href="#" class="text-blue underline">
-                Обратный звонок
-              </a>
-            </div>
-          </div>
+          <a href="/home.html">
+            <img src="img/logo-header.svg" alt="logo" class="w-full max-w-[273px] hidden min-[1433px]:block">
+            <img src="img/icons/fish-min-logo.svg" alt="logo" class="w-full min-w-[50px] block min-[1433px]:hidden">
+          </a>
+  
+          <button
+              class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition min-w-[150px] flex min-[915px]:hidden">
+            <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
+            Каталог
+          </button>
         </div>
-
-        <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-          <img src="img/icons/heard-blue.svg" alt="heard-blue">
-          <span class="hidden min-[1150px]:inline-block">Избранное</span>
-        </a>
-
-        <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-          <img src="img/icons/rows-block.svg" alt="rows-block">
-          <span class="hidden min-[1150px]:inline-block">Сравнения</span>
-        </a>
-
-        <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
-          <div class="relative w-10 h-10 flex-jc-c">
-            <img src="img/icons/shop.svg" alt="card-blue">
-            <span
-                class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
-          </div>
-          <span class="hidden min-[1150px]:inline-block">Корзина</span>
+  
+        <div class="flex-jsb-c gap-4 hidden min-[915px]:flex flex-grow">
+          <button
+              class="bg-blue rounded-[8px] px-6 h-[50px] flex-js-c min-w-[915pox]:flex-jsb-c gap-3 text-white hover:bg-blue/80 transition  min-w-[150px]">
+            <img src="img/icons/menu-catalog.svg" alt="menu-catalog">
+            Каталог
+          </button>
+          <form action="#" class="w-full min-[1328px]:mr-9 bg-blue rounded-[8px] flex-jsb-c h-[50px] p-[2px]">
+            <label class="w-full h-full bg-white rounded-[6px] overflow-hidden">
+              <input type="text" class="w-full h-full pl-3 placeholder:text-black/80 rounded-[6px] border-none"
+                     placeholder="Поиск по сайту">
+            </label>
+            <button class="w-[80px] h-[50px] bg-transparent flex-jc-c" type="submit">
+              <img src="img/icons/search-white.svg" alt="search-white">
+            </button>
+          </form>
         </div>
-
+  
+  
+        <div class="flex-jsb-c gap-8">
+          
+  
+          <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+            <img src="img/icons/heard-blue.svg" alt="heard-blue">
+            <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Избранное</span>
+          </a>
+  
+          <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+            <img src="img/icons/rows-block.svg" alt="rows-block">
+            <span class="hidden min-[1150px]:inline-block hover:text-blue transition">Сравнения</span>
+          </a>
+  
+          <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
+            <div class="relative w-10 h-10 flex-jc-c">
+              <img src="img/icons/shop.svg" alt="card-blue">
+              <span
+                  class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+            </div>
+            <span class="hidden min-[1150px]:inline-block hover:text-blue transition cursor-pointer">Корзина</span>
+          </div>
+  
+        </div>
+  
       </div>
-
+  
     </div>
-
   </div>
-</div>
-
-<div
-    class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-10">
-  <a href="home.html">
-    <img src="img/logo-header.svg" alt="" class="w-[122px]">
-  </a>
-
-  <div class="flex-jsb-c gap-1">
-    <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <img src="img/icons/heard-blue.svg" alt="heard-blue" width="24" height="24">
+  
+  <div
+      class="w-full fixed top-0 left-0 bg-[#F4F4F4] rounded-[0_0_16px_16px] h-[65px] px-4 flex-jsb-c flex sm:hidden z-[1000]">
+    <a href="home.html">
+      <img src="img/logo-header.svg" alt="" class="w-[122px]">
     </a>
-
-    <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <img src="img/icons/rows-block.svg" alt="rows-block" width="24" height="24">
-    </a>
-
-    <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
-      <div class="relative w-10 h-10 flex-jc-c">
-        <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
-        <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+  
+    <div class="flex-jsb-c gap-1">
+      <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <img src="img/icons/heard-blue.svg" alt="heard-blue" width="24" height="24">
+      </a>
+  
+      <a href="#" class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <img src="img/icons/rows-block.svg" alt="rows-block" width="24" height="24">
+      </a>
+  
+      <div class="flex-js-c gap-4 text-[18px] text-black text-medium">
+        <div class="relative w-10 h-10 flex-jc-c">
+          <img src="img/icons/shop.svg" alt="card-blue" width="26" height="26">
+          <span class="w-4 h-4 bg-[#CF301B] rounded-full flex-jc-c absolute top-0 right-0 text-[12px] text-white">2</span>
+        </div>
       </div>
+  
     </div>
-
+  
+    <div class="flex-je-c gap-1">
+      Меню
+      <img src="img/icons/mobile-menu.svg" alt="mobile-menu">
+    </div>
+  
   </div>
-
-  <div class="flex-je-c gap-1">
-    Меню
-    <img src="img/icons/mobile-menu.svg" alt="mobile-menu">
-  </div>
-
-</div>
-
 
 <div class="container w-full">
 
@@ -561,7 +561,7 @@
 
             <div class="flex-js-c gap-1 mt-2">
               <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo" class="w-[24px]">
-              <span class="text-[16px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+              <span class="text-[16px] text-[#CF301B] font-bold">+555 Кешбэк</span>
             </div>
           </div>
 
@@ -966,7 +966,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1040,7 +1040,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1110,7 +1110,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1180,7 +1180,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1256,7 +1256,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1326,7 +1326,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1486,7 +1486,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1560,7 +1560,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1630,7 +1630,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1700,7 +1700,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1776,7 +1776,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1846,7 +1846,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2039,7 +2039,7 @@
           </a>
 
           <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+  Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные          </p>
         </div>
 
         <ul>
@@ -2086,7 +2086,7 @@
         </a>
 
         <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
+Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -2159,7 +2159,7 @@
           </a>
 
           <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+  Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные          </p>
         </div>      </div>
 
     </div>
