--- a/modal-select-country.html
+++ b/modal-select-country.html
@@ -329,7 +329,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -571,7 +571,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -710,7 +710,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -784,7 +784,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -854,7 +854,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -924,7 +924,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1000,7 +1000,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1070,7 +1070,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1176,7 +1176,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1250,7 +1250,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1320,7 +1320,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1390,7 +1390,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1466,7 +1466,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1536,7 +1536,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1992,7 +1992,7 @@
           </a>
 
           <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+  Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные          </p>
         </div>
 
         <ul>
@@ -2039,7 +2039,7 @@
         </a>
 
         <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
+Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -2112,7 +2112,7 @@
           </a>
 
           <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+  Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные          </p>
         </div>      </div>
 
     </div>
