--- a/variants-popup.html
+++ b/variants-popup.html
@@ -561,7 +561,7 @@
 
             <div class="flex-js-c gap-1 mt-2">
               <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo" class="w-[24px]">
-              <span class="text-[16px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+              <span class="text-[16px] text-[#CF301B] font-bold">+555 Кешбэк</span>
             </div>
           </div>
 
@@ -966,7 +966,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1040,7 +1040,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1110,7 +1110,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1180,7 +1180,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1256,7 +1256,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1326,7 +1326,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1486,7 +1486,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1560,7 +1560,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1630,7 +1630,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1700,7 +1700,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1776,7 +1776,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -1846,7 +1846,7 @@
 
               <div class="flex-js-c gap-1 mt-2">
                 <img src="img/icons/fish-min-logo.svg" alt="fish-min-logo">
-                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кэшбэк</span>
+                <span class="text-[14px] text-[#CF301B] font-bold">+555 Кешбэк</span>
               </div>
 
 
@@ -2039,7 +2039,7 @@
           </a>
 
           <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+  Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные          </p>
         </div>
 
         <ul>
@@ -2086,7 +2086,7 @@
         </a>
 
         <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные        </p>
+Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные        </p>
       </div>
 
 
@@ -2159,7 +2159,7 @@
           </a>
 
           <p class="text-[14px] text-white opacity-80 max-w-[170px]">
-  Пн-Пт : с 10:00 до 18:00 Сб-Вс : Выходные          </p>
+  Пн-Пт : с 10:00 до 18:00  Сб-Вс : Выходные          </p>
         </div>      </div>
 
     </div>
